--- a/agregador/index.html
+++ b/agregador/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html> 
     <head> 
+<!--  Essential META Tags -->
+
+<meta property="og:title" content="Agregador JOTA de Pesquisas Eleitorais">
+<meta property="og:description" content="Agregador JOTA de Pesquisas Eleitorais">
+<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+<meta property="og:url" content="index.html">
+<meta name="twitter:card" content="summary_large_image">
+
+
+<!--  Non-Essential, But Recommended -->
+
+<meta property="og:site_name" content="European Travel, Inc.">
+<meta name="twitter:image:alt" content="Alt text for image">
+
+
+<!--  Non-Essential, But Required for Analytics -->
+
+<meta property="fb:app_id" content="your_app_id" />
+<meta name="twitter:site" content="@website-username">
+
+
         <meta charset="utf-8">
             <style> /* set the CSS */
 		@font-face {
@@ -66,13 +87,13 @@
     <label for="checkbox-3"><div style="display: inline-block; background: #3399CC; width: 12px; height: 12px"></div>Geraldo Alckmin     </label>
     <input type="checkbox" class="checkbox" name="Ciro Gomes" id="cirogomes">
 
-    <label for="checkbox-4"><div style="display: inline-block; background: #8B4513; width: 12px; height: 12px"></div>Ciro Gomes     </label>
+    <label for="checkbox-4"><div style="display: inline-block; background: #FFD445; width: 12px; height: 12px"></div>Ciro Gomes     </label>
 
     <input type="checkbox" class="checkbox" name="Marina Silva" id="marinasilva">
-    <label for="checkbox-5"><div style="display: inline-block; background: #9E9C90; width: 12px; height: 12px"></div>Marina Silva     </label>
+    <label for="checkbox-5"><div style="display: inline-block; background: #F48D53; width: 12px; height: 12px"></div>Marina Silva     </label>
 
     <input type="checkbox" class="checkbox" name="Não sabe/Não respondeu" id="naosabe" checked>
-    <label for="checkbox-6"><div style="display: inline-block; background: #F48D53; width: 12px; height: 12px"></div>Não sabe/Não respondeu     </label>
+    <label for="checkbox-6"><div style="display: inline-block; background: #9E9C90; width: 12px; height: 12px"></div>Não sabe/Não respondeu     </label>
   </fieldset>
 		<script src="index.js"> </script>
 
