--- a/agregador/index.html
+++ b/agregador/index.html
@@ -12,13 +12,13 @@
 
 <!--  Non-Essential, But Recommended -->
 
-<meta property="og:site_name" content="European Travel, Inc.">
-<meta name="twitter:image:alt" content="Alt text for image">
+<meta property="og:site_name" content="JOTA Info">
+<meta name="twitter:image:alt" content="JotaInfo">
 
 
 <!--  Non-Essential, But Required for Analytics -->
 
-<meta property="fb:app_id" content="your_app_id" />
+<meta property="fb:app_id" content="jotajustica" />
 <meta name="twitter:site" content="@website-username">
 
 
@@ -32,8 +32,9 @@
  		   font-family: Roboto-Bold;
     		   src: url(Roboto-Bold.ttf);
 		}
-		.checkbox {
+		label {
   		font-family: Roboto-Light;
+		font-size: 11px;
 		}
 		.divcheckbox {
 			display: inline-block;
@@ -85,32 +86,32 @@
   <fieldset align="center">
     <legend>Candidatos </legend>
     <div class="divcheckbox" style="display: inline-block;">
-    <input type="checkbox" class="checkbox" name="Lula" id="lula" checked>
     <label for="checkbox-1"><div style="display: inline-block; background: #E94A34; width: 12px; height: 12px"> </div>Lula     </label>
+    <input type="checkbox" class="checkbox" name="Lula" id="lula" checked>
     </div>
     <div class="divcheckbox" style="display: inline-block;">
-    <input type="checkbox" class="checkbox" name="Jair Bolsonaro" id="bolsonaro" checked>
     <label for="checkbox-2"><div style="display: inline-block; background: #3FA06B; width: 12px; height: 12px"></div>Jair Bolsonaro     </label>
+    <input type="checkbox" class="checkbox" name="Jair Bolsonaro" id="bolsonaro" checked>
     </div>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <input type="checkbox" class="checkbox" name="Geraldo Alckmin" id="alckmin" checked>
     <label for="checkbox-3"><div style="display: inline-block; background: #3399CC; width: 12px; height: 12px"></div>Geraldo Alckmin     </label>
+    <input type="checkbox" class="checkbox" name="Geraldo Alckmin" id="alckmin" checked>
     </dd>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <input type="checkbox" class="checkbox" name="Ciro Gomes" id="cirogomes">
     <label for="checkbox-4"><div style="display: inline-block; background: #FFD445; width: 12px; height: 12px"></div>Ciro Gomes     </label>
+    <input type="checkbox" class="checkbox" name="Ciro Gomes" id="cirogomes">
     </div>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <input type="checkbox" class="checkbox" name="Marina Silva" id="marinasilva">
     <label for="checkbox-5"><div style="display: inline-block; background: #F48D53; width: 12px; height: 12px"></div>Marina Silva     </label>
+    <input type="checkbox" class="checkbox" name="Marina Silva" id="marinasilva">
     </div>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <input type="checkbox" class="checkbox" name="Não sabe/Não respondeu" id="naosabe" checked>
     <label for="checkbox-6"><div style="display: inline-block; background: #9E9C90; width: 12px; height: 12px"></div>Não sabe/Não respondeu     </label>
+    <input type="checkbox" class="checkbox" name="Não sabe/Não respondeu" id="naosabe" checked>
     </div>
   </fieldset>
 		<script src="index.js"> </script>
