--- a/agregador/index.html
+++ b/agregador/index.html
@@ -83,8 +83,7 @@
 	<div id="explicacao" style="font-family: Roboto-Light"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
 <br>
 	<div id = "box"></div>
-  <fieldset align="center">
-    <legend>Candidatos </legend>
+  <div id = "caixa_legenda" align="center">
     <div class="divcheckbox" style="display: inline-block;">
     <label for="checkbox-1"><div style="display: inline-block; background: #E94A34; width: 12px; height: 12px"> </div>Lula     </label>
     <input type="checkbox" class="checkbox" name="Lula" id="lula" checked>
@@ -113,7 +112,7 @@
     <label for="checkbox-6"><div style="display: inline-block; background: #9E9C90; width: 12px; height: 12px"></div>Não sabe/Não respondeu     </label>
     <input type="checkbox" class="checkbox" name="Não sabe/Não respondeu" id="naosabe" checked>
     </div>
-  </fieldset>
+  </div>
 		<script src="index.js"> </script>
 
     </body>
