--- a/agregador/index.html
+++ b/agregador/index.html
@@ -44,6 +44,9 @@
 			    padding-left: 18px;
 
 		}
+		.quadradinho {
+			padding-right: 3px;		
+		}
             .line {
               fill: none;
               stroke: steelblue;
@@ -84,31 +87,31 @@
 <br>
   <div id = "caixa_legenda" align="center">
     <div class="divcheckbox" style="display: inline-block;">
-    <label for="checkbox-1"><div style="display: inline-block; background: #E94A34; width: 12px; height: 12px"> </div>Lula     </label>
+    <label for="checkbox-1"><div style="display: inline-block; background: #E94A34; width: 12px; height: 12px" class="quadradinho"> </div>Lula     </label>
     <input type="checkbox" class="checkbox" name="Lula" id="lula" checked>
     </div>
     <div class="divcheckbox" style="display: inline-block;">
-    <label for="checkbox-2"><div style="display: inline-block; background: #3FA06B; width: 12px; height: 12px"></div>Jair Bolsonaro     </label>
+    <label for="checkbox-2"><div style="display: inline-block; background: #3FA06B; width: 12px; height: 12px"class="quadradinho"></div>Jair Bolsonaro     </label>
     <input type="checkbox" class="checkbox" name="Jair Bolsonaro" id="bolsonaro" checked>
     </div>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <label for="checkbox-3"><div style="display: inline-block; background: #3399CC; width: 12px; height: 12px"></div>Geraldo Alckmin     </label>
+    <label for="checkbox-3"><div style="display: inline-block; background: #3399CC; width: 12px; height: 12px"class="quadradinho"></div>Geraldo Alckmin     </label>
     <input type="checkbox" class="checkbox" name="Geraldo Alckmin" id="alckmin" checked>
     </dd>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <label for="checkbox-4"><div style="display: inline-block; background: #FFD445; width: 12px; height: 12px"></div>Ciro Gomes     </label>
+    <label for="checkbox-4"><div style="display: inline-block; background: #FFD445; width: 12px; height: 12px"class="quadradinho"></div>Ciro Gomes     </label>
     <input type="checkbox" class="checkbox" name="Ciro Gomes" id="cirogomes">
     </div>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <label for="checkbox-5"><div style="display: inline-block; background: #F48D53; width: 12px; height: 12px"></div>Marina Silva     </label>
+    <label for="checkbox-5"><div style="display: inline-block; background: #F48D53; width: 12px; height: 12px"class="quadradinho"></div>Marina Silva     </label>
     <input type="checkbox" class="checkbox" name="Marina Silva" id="marinasilva">
     </div>
 
     <div class="divcheckbox" style="display: inline-block;">
-    <label for="checkbox-6"><div style="display: inline-block; background: #9E9C90; width: 12px; height: 12px"></div>Não sabe/Não respondeu     </label>
+    <label for="checkbox-6"><div style="display: inline-block; background: #9E9C90; width: 12px; height: 12px"class="quadradinho"></div>Não sabe/Não respondeu     </label>
     <input type="checkbox" class="checkbox" name="Não sabe/Não respondeu" id="naosabe" checked>
     </div>
   </div>
