--- a/agregador/index.html
+++ b/agregador/index.html
@@ -35,6 +35,10 @@
 		.novo_quadradinho {
 			display: inline-block;  width: 6px; height: 12px"		
 		}
+		#caixa_legenda_grafico {
+		font-family: Roboto-Light;
+		font-size: 11px;
+		}
 		label {
   		font-family: Roboto-Light;
 		font-size: 11px;
@@ -85,6 +89,20 @@
 
 	<div id="explicacao" style="font-family: Roboto-Light"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
 <br>
+  <div id = "caixa_legenda_grafico" align="center">
+    <div class="divcheckbox" style="display: inline-block;">
+    	<div style="display: inline-block; background: #000000; width: 12px; height: 12px" class="quadradinho"></div> <div class="novo_quadradinho"> </div>Tendência geral das pesquisas    </label>
+    </div>
+    <div class="divcheckbox" style="display: inline-block;">
+    <div style="display: inline-block; background: #B3B3B3; width: 12px; height: 12px"class="quadradinho"></div><div class="novo_quadradinho"></div>Margem de erro     </label>
+    </div>
+
+    <div class="divcheckbox" style="display: inline-block;">
+    <div style="display: inline-block; background: #000000; color: #000000; border-radius: 200px; width: 12px; height: 12px"class="quadradinho"></div><div class="novo_quadradinho"></div>Resultado de uma pesquisa     </label>
+    </dd>
+
+  </div>
+
   <div id = "caixa_legenda" align="center">
     <div class="divcheckbox" style="display: inline-block;">
     <label for="checkbox-1"><div style="display: inline-block; background: #E94A34; width: 12px; height: 12px" class="quadradinho"></div> <div class="novo_quadradinho"> </div>Lula     </label>
