add radial quadradinho candidato

--- a/agregador/index.html
+++ b/agregador/index.html
@@ -32,6 +32,10 @@
  		   font-family: Roboto-Bold;
     		   src: url(Roboto-Bold.ttf);
 		}
+		.quadradinho {
+                  border-radius: 8px;
+		
+		}
 		.novo_quadradinho {
 			display: inline-block;  width: 6px; height: 12px"		
 		}
