adiciona imagem site

--- a/agregador/index.html
+++ b/agregador/index.html
@@ -5,7 +5,7 @@
 
 <meta property="og:title" content="Agregador JOTA de Pesquisas Eleitorais">
 <meta property="og:description" content="Agregador JOTA de Pesquisas Eleitorais">
-<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+<meta property="og:image" content="imagem_site.png">
 <meta property="og:url" content="index.html">
 <meta name="twitter:card" content="summary_large_image">
 
