--- a/agregador/index.html
+++ b/agregador/index.html
@@ -88,8 +88,8 @@
 
     </head>
     <body>
-	<div style="display: block; background: #FF0000; width: 50px; height: 5px"></div>
-	<h1 align="left" style="font-family: Roboto-Bold"> Agregador JOTA de Pesquisas Eleitorais</h1> <br>
+	<div style="display: block; background: #FF0000; width: 50px; height: 5px; padding: 1px"></div>
+	<h1 align="left" style="font-family: Roboto-Bold"> Agregador JOTA de Pesquisas Eleitorais</h1> 
 
 	<div id="explicacao" style="font-family: Roboto-Light"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
 <br>
