arruma sei la o que

--- a/agregador/index.html
+++ b/agregador/index.html
@@ -89,9 +89,11 @@
     </head>
     <body>
 	<div style="display: block; background: #FF0000; width: 50px; height: 5px; padding: 1px"></div>
+	<div id="tituloelinhafina" align="center">	
 	<h1 align="left" style="font-family: Roboto-Bold"> Agregador JOTA de Pesquisas Eleitorais</h1> 
 
 	<div id="explicacao" style="font-family: Roboto-Light"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
+	</div>
 <br>
   <div id = "caixa_legenda_grafico" align="center">
     <div class="divcheckbox" style="display: inline-block;">
