--- a/agregador/index.html
+++ b/agregador/index.html
@@ -89,7 +89,7 @@
     </head>
     <body>
 	<div style="display: block; background: #FF0000; width: 50px; height: 5px; padding: 1px"></div>
-	<div id="tituloelinhafina" align="center" style="margin-left: 100px; margin-right: 100px;">	
+	<div id="tituloelinhafina" align="left" style="margin-left: 100px; margin-right: 100px;">	
 		<div align="left" style="font-family: Roboto-Bold; font-size: 30px"> Agregador JOTA de Pesquisas Eleitorais</div> 
 
 		<div id="explicacao" style="font-family: Roboto-Light; font-size: 18px"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
