arruma caixa alta do titulo

--- a/agregador/index.html
+++ b/agregador/index.html
@@ -90,7 +90,7 @@
     <body>
 	<div style="display: block; background: #FF0000; width: 50px; height: 5px; padding: 1px; margin-left: 100px; margin-top: 100px"></div>
 	<div id="tituloelinhafina" align="left" style="margin-left: 100px; margin-right: 100px;">	
-		<div align="left" style="font-family: Roboto-Bold; font-size: 30px"> Agregador JOTA de Pesquisas Eleitorais</div> <br>
+		<div align="left" style="font-family: Roboto-Bold; font-size: 30px"> Agregador JOTA de pesquisas eleitorais</div> <br>
 
 		<div id="explicacao" style="font-family: Roboto-Light; font-size: 18px"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
 	</div>
