--- a/agregador/index.html
+++ b/agregador/index.html
@@ -5,8 +5,8 @@
 
 <meta property="og:title" content="Agregador JOTA de Pesquisas Eleitorais">
 <meta property="og:description" content="Agregador JOTA de Pesquisas Eleitorais">
-<meta property="og:image" content="imagem_site.png">
-<meta property="og:url" content="index.html">
+<meta property="og:image" content="http://jotajornalismorepo.github.io/agregador/imagem_site.png">
+<meta property="og:url" content="http://data.jota.info/agregador/">
 <meta name="twitter:card" content="summary_large_image">
 
 
