--- a/agregador/index.html
+++ b/agregador/index.html
@@ -5,7 +5,7 @@
 
 <meta property="og:title" content="Agregador JOTA de Pesquisas Eleitorais">
 <meta property="og:description" content="Agregador JOTA de Pesquisas Eleitorais">
-<meta property="og:image" content="http://jotajornalismorepo.github.io/agregador/imagem_site.png">
+<meta property="og:image" content="http://data.jota.info/agregador/imagem_site.png">
 <meta property="og:url" content="http://data.jota.info/agregador/">
 <meta name="twitter:card" content="summary_large_image">
 
@@ -92,7 +92,7 @@
 	<div id="tituloelinhafina" align="left" style="margin-left: 100px; margin-right: 100px;">	
 		<div align="left" style="font-family: Roboto-Bold; font-size: 30px"> Agregador JOTA de pesquisas eleitorais</div> <br>
 
-		<div id="explicacao" style="font-family: Roboto-Light; font-size: 18px"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
+		<div id="explicacao" style="font-family: Roboto-Light; font-size: 22px"> Ferramenta permite que pesquisas espontâneas sejam agregadas e mostrem intenções de voto mais próximas da realidade; com o modelo estatístico desenvolvido pelo JOTA, podemos comparar resultados de diferentes institutos de pesquisa </div>
 	</div>
 <br>
   <div id = "caixa_legenda_grafico" align="center">
@@ -152,7 +152,7 @@
 	<br>
 	<div id="resto" style="margin-left: 100px; margin-right: 200px;">
 		<div style="font-family: Roboto-Bold; font-size: 25px; color: #E84B37; display: inline" allign="left" > Metodologia </div>
-		<div style="font-family: Roboto-Light	; font-size: 16px;"> 
+		<div style="font-family: Roboto-Light	; font-size: 20px;"> 
 
 <p>Essa prática de agregar pesquisas é pouco comum no Brasil e ficou famosa nos EUA no site de Nate Silver, o FiveThirtyEight, que usa ferramentas estatísticas para analisar eleições. Nos últimos meses, criamos um modelo estatístico próprio para agregar as diferentes pesquisas e mostrar tendências eleitorais. O modelo é bayesiano e usa informações anteriores para aprender a partir dos dados e tentar diminuir o grau de incerteza. Outros modelos feitos por jornalistas e profissionais diversos usam média de pesquisas, mas acreditamos que isso pode inserir distorções nos resultados, por vários motivos. O primeiro é que existem institutos mais confiáveis que outros. Além disso, as amostras são coletadas de forma diferente, usando métodos diferentes e em datas diferentes. Por fim, a inferência bayesiana permite que nosso modelo seja explícito em relação aos pressupostos que estamos assumindo. Ao contrário dos EUA, em que o número de pesquisas é elevado, no Brasil, contamos com poucas, e para isso precisamos fazer algumas considerações para lidar com essa escassez. Seguindo padrões internacionais, nosso agregador usa resultados de pesquisas espontâneas e não estimuladas, por acreditarmos que esses dados tenham mais precisão. </p>
 
